--- a/.github/workflows/mmain.yml
+++ b/.github/workflows/mmain.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install flake8 and unittest
       run: |
         python -m pip install flake8
-        python -m pip install unittest
+        python -m pip install unittest2
 
     - name: Display Python version
       run: python --version
